# RAG-AI

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docker/: Dockerfile
docs/: HLD.md
scripts/: demo.ps1  demo.sh
src/api/: dependencies.py  middleware.py  schemas.py  server.py
src/api/routes/: collections.py  ingest.py  query.py
src/core/: config.py  exceptions.py  logging.py  observability.py  resilience.py
src/embeddings/: cache.py  ollama.py
src/guardrails/: __init__.py  audit.py  data_classifier.py  dlp.py  engine.py  owasp_validators.py  validators.py
src/ingestion/: chunker.py  dedup.py  loader.py  pipeline.py
src/llm/: chain.py  ollama.py
src/retrieval/: context.py  reranker.py  retriever.py
src/ui/: app.py
src/vectorstore/: base.py  chroma_store.py  faiss_store.py
tests/: conftest.py  test_api.py  test_guardrails.py  test_ingestion.py  test_owasp_protection.py  test_resilience.py  test_retrieval.py
