[project]
name = "rag-ai"
version = "1.0.0"
description = "Production-grade RAG system with Ollama and ChromaDB"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
